# vscode-book-python

./: .editorconfig  README.md
data_science/: .gitignore  .python-version  README.md  note.ipynb  note.py  pyproject.toml  requirement.txt
server/: .gitignore  Dockerfile  api.py  dev-requirements.txt  pyproject.toml  static
server/.devcontainer/: Dockerfile  devcontainer.json
server/model/tasks/: repository.py  tasks.py
server/model/todo/: __init__.py
server/tests/: test_repository.py  test_tasks.py
