[tool.poetry]
name = "vscode-book-data-science"
version = "0.1.0"
description = ""
authors = ["74th <site@74th.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
