[tool.poetry]
name = "vscode-book-task-server"
version = "0.1.0"
description = ""
authors = ["74th <site@74th.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pylint = "^2.5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
